feat: add documentation for ticket and banner routes
